tests/conformance/positive/18-directive-self-closing.sml
<!-- Self-closing directive tags -->
<tool name="bash" />
<session name="ephemeral" />
<agent name="helper" />
