tests/conformance/negative/25-directive-in-contract.sml
<!-- Error: directives inside contract bodies are invalid -->
<skill define="contract" name="directive-in-contract">
  <tool name="bash" />
</skill>
